# uv-test

./: README.md  apps.py  main.py  pyproject.toml  send_email.py
.streamlit/: config.toml
design-pattern/notificacao/: notificacao_email.py  notificacao_facade.py  notificacao_sms.py
design-pattern/pagamento/: pagamento_cartao.py  pagamento_factory.py  pagamento_pix.py
design-pattern/pedido/: pedido.py  pedido_delivery.py  pedido_retirada.py
pages/: contracheque.py  megasena.py  unibb.py
src/: composicao_ibov.csv  diope.json  iris.csv  names.csv
styles/: styles.css
