[project]
name = "uv-test"
version = "0.1.0"
description = "Projeto voltado ao gerenciador uv para teste de funcionamento"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.14",
    "pandas>=2.3.0",
    "polars>=1.31.0",
    "psycopg2-binary>=2.9.10",
    "pymssql>=2.3.7",
    "pymysql>=1.1.1",
    "python-dotenv>=1.1.1",
    "streamlit>=1.46.1",
    "unidecode>=1.4.0",
    "uvicorn>=0.35.0",
    "watchdog>=6.0.0",
]
